@@ -42,6 +42,7 @@ The Seattle Times (seattletimes.com)\
 The Sydney Morning Herald (smh.com.au)\
 The Washington Post (washingtonpost.com)\
 The Wall Street Journal (wsj.com)
+Wired (wired.com)
 
 ### Troubleshooting
 If WSJ stops working try removing all wsj.com site cookies.
